--- a/Report (Draft).Rmd
+++ b/Report (Draft).Rmd
@@ -12,7 +12,7 @@ output:
 ```{r setup, include=FALSE}
 # 79: -------------------------------------------------------------------------
 #! We generally don't need to see the code in the results document.
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 #! Make sure all chunks have a label. This one is labelled 'setup'.
 ```
 
@@ -98,8 +98,244 @@ years and possibly forecast future stock prices.
 
 ### Python
 
-```{python echo=FALSE}
+#### Data cleaning and visualization
+
+Firstly, we import the data.
+
+```{python import}
+import sys
+sys.path.append('/usr/local/lib/python3.8/site-packages')
+import pandas as pd
+import numpy as np
+df = pd.read_csv('./NIFTY50_all.csv')
 ```
+
+The variable <code>Trades</code> has too many missing values, we can delete it.
+We can delete redundant variables and impute <code>\%Deliverable</code> via
+Simple Imputation because the are not so many missing values. We also need to
+merge different symbols for the same stock.
+
+```{python cleaning}
+from datetime import datetime
+from sklearn.impute import SimpleImputer
+# Drop redundant variables and variables with too many missing values
+df['Date'] = [datetime.strptime(x, '%Y-%m-%d') for x in df['Date']]
+df1 = df.drop(['Trades', 'Deliverable Volume', 'Series'], axis=1)
+ls1 = ['MUNDRAPORT', 'UTIBANK', 'BAJAUTOFIN', 'BHARTI', 'HEROHONDA',
+       'HINDALC0', 'HINDLEVER', 'INFOSYSTCH', 'JSWSTL', 'KOTAKMAH', 'TELCO',
+       'TISCO', 'UNIPHOS', 'SESAGOA', 'SSLT', 'ZEETELE']
+ls2 = ['ADANIPORTS', 'AXISBANK', 'BAJFINANCE', 'BHARTIARTL', 'HEROMOTOCO',
+       'HINDALCO', 'HINDUNILVR', 'INFY', 'JSWSTEEL', 'KOTAKBANK', 'TATAMOTORS',
+       'TATASTEEL', 'UPL', 'VEDL', 'VEDL', 'ZEEL']
+df1['Symbol'] = df1['Symbol'].replace(ls1, ls2)
+df1['Symbol'] = pd.Categorical(df1['Symbol'])
+# Impute missing values
+df2 = pd.get_dummies(data=df1, drop_first=True)
+df2['Date']=df2['Date'].map(datetime.toordinal)
+imp = SimpleImputer()
+p = imp.fit_transform(df2)
+df1['%Deliverble'] = p[:, 10]
+```
+
+We can take a look at the data. Take the stock "ADANIPORTS" as an example.
+
+```{python visualization}
+import matplotlib.pyplot as plt
+names = df1['Symbol'].cat.categories
+example = df1[df1['Symbol'] == names[0]]
+fig, ax = plt.subplots(3, 1, figsize=(8, 8))
+ax[0].plot(example['Date'], example['VWAP'])
+ax[0].set_xticks([])
+ax[0].set_xlabel('Days')
+ax[0].set_ylabel('Volume weighted average price')
+ax[1].plot(example['Date'], example['Volume'])
+ax[1].set_xticks([])
+ax[1].set_xlabel('Days')
+ax[1].set_ylabel('Volume')
+ax[2].plot(example['Date'], example['Turnover'])
+ax[2].set_xticks([])
+ax[2].set_xlabel('Days')
+ax[2].set_ylabel('Turnover')
+ax[0].set_title('Time series plots of stock %s' % names[0])
+```
+
+#### Determine model parameters
+
+We will use the time series VWAP for the analysis below.
+
+The differencing parameter \(d\) of the model can be determined by doing
+Augmented Dickey-Fuller tests, which can indicate whether the time series
+are stationary. 
+
+```{python determine_d}
+from statsmodels.tsa.arima_model import ARIMA
+from pmdarima.arima.utils import ndiffs
+# This function chooses the smallest d for the series to be stationary
+names = df1['Symbol'].cat.categories
+ls0 = []
+for i in names:
+    subdf = df1[df1['Symbol'] == i]
+    # Select the rows for stock i
+    ls0.append(ndiffs(subdf['VWAP'], test='adf'))
+ls0  # Most values are 1
+max(ls0) # We don't need 2-order differencing
+```
+
+In order to ensure all time series are stationary, we choose \(d=1\) for all
+stocks.
+
+The AR parameter \(p\) of the model can be determined by looking at Partial
+Autocorrelation plots. These plots indicate the correlation between the series
+and its lag. We use the first 4 stocks alphabetically as a sample. Notice the
+series need to be differenced first (\(d=1\)).
+
+```{python determine_p}
+from statsmodels.graphics.tsaplots import plot_acf, plot_pacf
+fig, ax = plt.subplots(1, 4, figsize=(15, 5))
+# Take the first 4 stocks as a sample
+for i in range(4):
+    subdf = df1[df1['Symbol'] == names[i]]
+    # Select the rows for stock number i
+    plot_pacf(subdf['VWAP'].diff().dropna(), ax=ax[i])
+    ax[i].set_title('PACF plot for stock %s' % names[i])
+```
+
+Notice lag 1 is at least borderline significant in the plots for all stocks,
+but lag 2 is not significant. Therefore, we can choose \(p=1\) for all stocks.
+
+The MA parameter \(q\) of the model can be determined by looking at
+Autocorrelation (ACF) plots. We use the next 4 stocks alphabetically as a 
+sample. Similarly, the series need to be differenced (\(d=1\)).
+
+```{python determine_q}
+fig, ax = plt.subplots(1, 4, figsize=(15, 5))
+for i in range(4):
+    subdf = df1[df1['Symbol'] == names[i+4]]
+    plot_acf(subdf['VWAP'].diff().dropna(), ax=ax[i])
+    ax[i].set_title('ACF plot for stock %s' % names[i+4])
+```
+
+Notice lag 1 is significant for most of the stocks but lag 2 is not. Therefore
+we can choose \(q=1\) for the MA term.
+
+#### Fit models
+
+According to the process above, we choose the \(ARIMA(1, 1, 1)\) for all
+stocks. After fitting the models, we can view some of the summaries. Take the
+first 5 stocks alphabetically as an example.
+
+```{python fitmodels111}
+mlist = [] # Models
+flist = [] # Model fits
+for i in names:
+    subdf = df1[df1['Symbol'] == i]
+    m = ARIMA(list(subdf['VWAP']), order=(1, 1, 1))
+    mlist.append(m)
+    flist.append(m.fit(disp=0))
+for i in range(5):
+    print(flist[i].summary())
+```
+
+Notice that for the first 3 stocks, the model fit is not good. We can consider
+removing the MA term since it's non-significant for some stocks, i.e. choosing
+the \(ARIMA(1, 1, 0)\) model.
+
+```{python fitmodels110}
+mlist0 = [] # Models
+flist0 = [] # Model fits
+for i in names:
+    subdf = df1[df1['Symbol'] == i]
+    m = ARIMA(list(subdf['VWAP']), order=(1, 1, 0))
+    mlist0.append(m)
+    flist0.append(m.fit(disp=0))
+```
+
+We use AIC has the model choosing criteria. The AIC decreases for the first
+three stocks, and increases for the 4th and 5th, indicating different stocks
+need different models.
+
+```{python choose_model}
+includema = [] # Whether MA term should be included
+for i in range(50):
+    includema.append(flist0[i].aic > flist[i].aic)
+pd.value_counts(includema)
+```
+
+#### Model diagnostics
+
+Firstly, we can use the in-sample lagged values to predict the time series.
+
+```{python in_sample_pred}
+fig, ax = plt.subplots(10, 5, figsize=(15, 20))
+for i in range(50):
+    if(includema): # ARIMA(1,1,1)
+        flist[i].plot_predict(dynamic=False, ax=ax[i // 5, i % 5])
+    else: # ARIMA(1,1,0)
+        flist0[i].plot_predict(dynamic=False, ax=ax[i // 5, i % 5])
+    ax[i // 5, i % 5].set_title(names[i])
+fig.tight_layout()
+fig
+```
+
+We can also forecast future VWAPs using the chosen models. For example, we
+can forecast the average prices in the next 200 trading days after the time
+series.
+
+```{python forecast, echo = T, results = 'hide'}
+fig, ax = plt.subplots(10, 5, figsize=(15, 20))
+for i in range(50):
+    if(includema):
+        forecast, b, ci = flist[i].forecast(200, alpha=0.05)
+    else:
+        forecast, b, ci = flist0[i].forecast(200, alpha=0.05)
+    subdf = df1[df1['Symbol'] == names[i]]
+    ax[i // 5, i % 5].plot(list(subdf['VWAP']))
+    idx = range(len(subdf['VWAP']), 200+len(subdf['VWAP']))
+    ax[i // 5, i % 5].plot(idx, forecast)
+    ax[i // 5, i % 5].fill_between(idx, ci[:, 0], ci[:, 1], 
+                 alpha=0.15)
+    ax[i // 5, i % 5].set_title(names[i])
+    ax[i // 5, i % 5].set_xticks([])
+fig.tight_layout()
+```
+```{python forecast_results}
+fig
+```
+
+Notice the confidence intervals are very wide, indicating it's not easy to
+forecast stock prices.
+
+#### Model improvement
+
+Now that we chose different models for different stocks, we can further
+improve the models by choosing the most proper model for each stock.
+
+We can use <code>auto_arima</code> to choose models. It compares different
+models and chooses the best one. Again, we use ADF test to determine \(d\),
+and AIC to determine \(p,q\). Take "ADANIPORTS", "ASIANPAINT" and "BPCL" as
+examples.
+
+```{python improvements}
+import pmdarima as paim
+subdf = df1[df1['Symbol'] == names[0]]
+m1 = paim.auto_arima(subdf['VWAP'], start_p=1, start_q=1, test='adf',
+                     max_p=3, max_q=3)
+m1.summary() # The chosen model was ARIMA(1, 0, 1), which is a good fit.
+ls0[0] # Indeed, differencing is not needed for the stock 'ADANIPORTS'.
+subdf = df1[df1['Symbol'] == names[1]]
+m2 = paim.auto_arima(subdf['VWAP'], start_p=1, start_q=1, test='adf',
+                     max_p=3, max_q=3)
+m2.summary() # The chosen model was ARIMA(0, 1, 0), which is a good fit.
+# For 'ASIANPAINT', the 1-order difference series is close to a constant.
+subdf = df1[df1['Symbol'] == names[7]]
+m3 = paim.auto_arima(subdf['VWAP'], start_p=1, start_q=1, test='adf',
+                     max_p=3, max_q=3, error_action='ignore')
+m3.summary() # The chosen model was ARIMA(1, 1, 2), which is a good fit.
+# For 'BPCL' second order MA term is needed.
+```
+
+We can improve each of the models invidivually for slightly better
+forecast performance.
 
 ### R
 
