--- a/Report (Draft).Rmd
+++ b/Report (Draft).Rmd
@@ -13,6 +13,7 @@ output:
 # 79: -------------------------------------------------------------------------
 #! We generally don't need to see the code in the results document.
 knitr::opts_chunk$set(echo = TRUE)
+library(Statamarkdown)
 #! Make sure all chunks have a label. This one is labelled 'setup'.
 ```
 
@@ -340,6 +341,167 @@ forecast performance.
 ### R
 
 ### Stata
+
+#### Data cleaning and visualization
+
+Firstly, we import the data and do data cleanning. We drop the variable 
+<code>\Trades</code> and <code>\%Deliverable</code>. Also, we transform the
+<code>\Date</code> variable from string type to date type to treat the whole
+data set as time series data set.
+
+```{stata import_cleanning_stata, results = "hide"}
+import delimited NIFTY50_all.csv, clear
+
+* Data Cleaning
+gen date2 = date(date, "YMD")
+format date2 %tdCCYY-nn-dd
+drop date series
+drop trades deliverablevolume
+rename date2 date
+label variable date "Date"
+
+* Replace Symbol Names
+replace symbol = "ADANIPORTS" if symbol == "MUNDRAPORT"
+replace symbol = "AXISBANK" if symbol == "UTIBANK"
+replace symbol = "BAJFINANCE" if symbol == "BAJAUTOFIN"
+replace symbol = "BHARTIARTL" if symbol == "BHARTI"
+replace symbol = "HEROMOTOCO" if symbol == "HEROHONDA"
+replace symbol = "HINDALCO" if symbol == "HINDALC0"
+replace symbol = "HINDUNILVR" if symbol == "HINDLEVER"
+replace symbol = "INFY" if symbol == "INFOSYSTCH"
+replace symbol = "JSWSTEEL" if symbol == "JSWSTL"
+replace symbol = "KOTAKBANK" if symbol == "KOTAKMAH"
+replace symbol = "TATAMOTORS" if symbol == "TELCO"
+replace symbol = "TATASTEEL" if symbol == "TISCO"
+replace symbol = "UPL" if symbol == "UNIPHOS"
+replace symbol = "VEDL" if symbol == "SESAGOA"
+replace symbol = "VEDL" if symbol == "SSLT"
+replace symbol = "ZEEL" if symbol == "ZEETELE"
+
+* Save the cleaned data
+save NIFTY_clean, replace 
+
+```
+
+Then we visualize the data and the stock "ADANIPORTS" is taken as an example.
+
+```{stata visualization_stata, results = "hide"}
+use NIFTY_clean, clear
+
+keep if symbol == "ADANIPORTS"
+
+graph twoway line vwap date, color("blue") xtitle("Days") ytitle("Volume weighted average price")
+graph export vwap_data.png, replace
+graph twoway line volume date, color("blue") xtitle("Days") ytitle("Volume")
+graph export vwap_data.png, replace
+graph twoway line turnover date, color("blue") xtitle("Days") ytitle("Turnover")
+graph export vwap_data.png, replace
+```
+
+#### Determine model parameters
+
+We will use the time series VWAP for the analysis below.
+
+For all stocks, we do Augmented Dickey-Fuller tests to determine whether the
+time series are stationary or not.
+
+```{stata ADFtest_stata}
+
+use NIFTY_clean, clear
+
+foreach sym of local sbls {
+	use NIFTY_clean, clear
+	keep if symbol == "`sym'"
+	tsset date
+	dfuller d1.vwap
+}
+```
+
+We do the test on the <code>\vwap</code> with the first-order differentiation.
+All stocks are reporting minimum p-values, hence we decide to use \(d=1\) for 
+all stocks.
+
+Then, in order to find AR parameter \(p\) of the model, we generate the partial 
+autoregressive (PACF) plots together with autoregressive (ACF) plots.
+
+Note: we will only plot the first 8 stocks as an example.
+
+```{stata pacf_acf, results = "hide"}
+use NIFTY_clean, clear
+
+levelsof(symbol), local(sbls)
+
+local sbls_f8 = "ADANIPORTS ASIANPAINT AXISBANK BAJAJ-AUTO BAJAJFINSV BAJFINANCE BHARTIARTL BPCL"
+
+foreach sym of local sbls_f8 {
+	use NIFTY_clean, clear
+	keep if symbol == "`sym'"
+	tsset date
+	ac vwap
+	graph export acf_`sym'.png
+	pac vwap
+	graph export pacf_`sym'.png
+}
+
+```
+
+We can get the similar conclusion that lag 1 is absolutely significant while lag
+2 is not, hencewe can choose \(p=1\) for the AR term and \(q=1\) for the MA 
+term for all stocks.
+
+#### Fit models
+
+According to the process above, we choose the \(ARIMA(1, 1, 1)\) for all
+stocks. However, diagnostics tells sometimes the \(ARIMA(1, 1, 0)\) performs
+better for some stocks. Hence, we try to use the better model to fit the data 
+and then plot the predicted values against original values.
+
+Note: we will only plot the first 5 stocks as an example.
+
+```{stata fitting, results = "hide"}
+
+use NIFTY_clean, clear
+
+local sbls_f5 = "ADANIPORTS ASIANPAINT AXISBANK BAJAJ-AUTO BAJAJFINSV"
+
+foreach sym of local sbls_f5 {
+	use NIFTY_clean, clear
+	keep if symbol == "`sym'"
+	tsset date
+	arima vwap, arima(1,1,1)
+	estat ic
+	mat l_aim = r(S)
+	scalar aic_aim = l_aim[1,5]
+	arima vwap, arima(1,1,0)
+	estat ic
+	mat l_ai = r(S)
+	scalar aic_ai = l_aim[1,5]
+	if aic_aim > aic_ai {
+		arima vwap, arima(1,1,0)
+		predict vwap_p
+		gen vwap_p = vwap_pd + vwap
+		graph twoway line vwap date, lwidth("vthin") color("blue") || line vwap_p date, lwidth("vthin") color("red") lpattern("dash")
+		graph export fitted_`sym'.png
+	} 
+	else {
+		arima vwap, arima(1,1,1)
+		predict vwap_pd
+		gen vwap_p = vwap_pd + vwap
+		graph twoway line vwap date, lwidth("vthin") color("blue") || line vwap_p date, lwidth("vthin") color("red") lpattern("dash")
+		graph export fitted_`sym'.png
+	}
+}
+
+```
+
+#### Model improvement
+
+Now that we chose different models for different stocks, we can further
+improve the models by choosing the most proper model for each stock.
+
+However, Stata does not have some similar funciton as <code>auto_arima</code> 
+to choose models automatically. Hence, we may related to other two languages (
+Python, R). Heavy and tedious computation is expected in Stata here.
 
 ## To-do list
 
